# ncix

./: CMakeLists.txt  FindCDF.cmake  README.md  cdf_mod.f  demo.f90  ncix-datetime.f90  ncix-epochs.f90  ncix-get.h  ncix-int.f90  ncix-int.h  ncix-real.f90  ncix-real.h  ncix-str.f90  ncix.f90  ncix_attrs_template.f90  ncix_epoch.f90  ncix_ifx_template.f90  ncix_records_template.f90  ncix_template.f90  tests.f90
